--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-timer-hook": "^3.0.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "cypress": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,12 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "cypress": "^8.2.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-cypress": "^2.11.3",
-    "eslint-plugin-jest": "^24.4.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.2"
-  }
+  "devDependencies": {}
 }
